# create-tauri-core

./: .env.example  .prettierignore  README.md  components.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
src/: main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: main.rs
src/app/: index.tsx  provider.tsx  router.tsx
src/app/routes/: home.tsx  not-found.tsx
src/common/components/ui/: button.tsx
src/common/features/errors/: AppErrorPage.tsx  ComponentErrorPage.tsx  ErrorPageLayout.tsx  NotFoundErrorPage.tsx
src/components/ui/: button.tsx  tooltip.tsx
src/config/: env.ts
src/core/: App.tsx  global.css  router.tsx
src/features/built-with/: index.tsx
src/features/errors/: component-error.tsx
src/features/github-star-button/: index.tsx
src/features/home/: index.tsx
src/features/home/components/: GithubStarButton.tsx
src/features/home/components/BuiltWithLogos/: index.tsx
src/lib/: create-env.ts
